# nexios-plugins

./: .gitignore  README.md  pyproject.toml
examples/file_router/: main.py
examples/html_plugin/: main.py
examples/html_plugin/routes/: route.py  todo_service.py
examples/rpc/: client.py  server.py
nexios_plugins/file_router/: __init__.py
nexios_plugins/html/: __init__.py
nexios_plugins/static_file/: __init__.py
