[tool.poetry]
name = "nexios-plugins"
version = "0.1.0"
description = "A collection of plugins for Nexios"
authors = ["Mohammed Al-Ameen <ameenmohammed2311@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nexios = "^2.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
